sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: ')' expected but ';' found.
	          while ((j > 0) && (plusPetitQue(j-1,valeur));
                                                              ^