sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var swapped = false;
	for (i<- 0 to getNombreValeurs()-1)
	{
	    		var j = i;
	    		var value = getValeur(i)
	          while ((j > 0) && (plusPetitQue(j-1,valeur));
	    		{
                   copie(j,j-1)
	    		    j -=1;
                 }
               setValeur(j-1,value)
	    	}
}


